// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commons tests Stats 1`] = `
Array [
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": undefined,
    "name": "TestClass",
    "numberOfCalls": 1,
    "parent": null,
    "path": "/src/__integration-tests__/others/class.ts",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": undefined,
    "name": "ClassComponent",
    "numberOfCalls": 1,
    "parent": null,
    "path": "/src/__integration-tests__/components/class-components.tsx",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": undefined,
    "name": "recursiveFunction",
    "numberOfCalls": 1,
    "parent": null,
    "path": "/src/__integration-tests__/others/recursive-function.ts",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
      Object {
        "args": undefined,
        "stats": Object {},
      },
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": undefined,
    "name": "recursiveFunction",
    "numberOfCalls": 3,
    "parent": Object {
      "dataTestId": undefined,
      "name": "recursiveFunction",
      "nthChild": undefined,
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
    },
    "path": "/src/__integration-tests__/others/recursive-function.ts",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": "test-id-1",
    "name": "WithDeps",
    "numberOfCalls": 1,
    "parent": Object {
      "dataTestId": undefined,
      "name": "recursiveFunction",
      "nthChild": undefined,
      "originMock": true,
      "parent": Object {
        "dataTestId": undefined,
        "name": "recursiveFunction",
        "nthChild": undefined,
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
      },
      "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
    },
    "path": "/src/__integration-tests__/components/UseEffect.tsx",
  },
  Object {
    "calls": Array [
      Object {
        "args": undefined,
        "stats": Object {},
      },
    ],
    "dataTestId": "test-id-2",
    "name": "WithDeps",
    "numberOfCalls": 1,
    "parent": Object {
      "dataTestId": undefined,
      "name": "recursiveFunction",
      "nthChild": undefined,
      "originMock": true,
      "parent": Object {
        "dataTestId": undefined,
        "name": "recursiveFunction",
        "nthChild": undefined,
        "originMock": true,
        "parent": null,
        "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
      },
      "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
    },
    "path": "/src/__integration-tests__/components/UseCallback.tsx",
  },
]
`;

exports[`Commons tests Stats 2`] = `
Object {
  "calls": Array [
    Object {
      "args": undefined,
      "stats": Object {},
    },
  ],
  "dataTestId": undefined,
  "name": "TestClass",
  "numberOfCalls": 1,
  "parent": null,
  "path": "/src/__integration-tests__/others/class.ts",
}
`;

exports[`Commons tests Stats 3`] = `
Object {
  "calls": Array [
    Object {
      "args": undefined,
      "stats": Object {},
    },
  ],
  "dataTestId": "test-id-1",
  "name": "WithDeps",
  "numberOfCalls": 1,
  "parent": Object {
    "dataTestId": undefined,
    "name": "recursiveFunction",
    "nthChild": undefined,
    "originMock": true,
    "parent": Object {
      "dataTestId": undefined,
      "name": "recursiveFunction",
      "nthChild": undefined,
      "originMock": true,
      "parent": null,
      "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
    },
    "relativePath": "/src/__integration-tests__/others/recursive-function.ts",
  },
  "path": "/src/__integration-tests__/components/UseEffect.tsx",
}
`;
